After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765134 - Crash (SIGSEGV) in gtk_css_gadget_get_visible
Crash (SIGSEGV) in gtk_css_gadget_get_visible
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.20.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-04-16 07:18 UTC by Christian Stadelmann
Modified: 2016-04-19 19:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
A backtrace from gdb attached to exaile (200.55 KB, text/plain)
2016-04-16 07:18 UTC, Christian Stadelmann
Details

Description Christian Stadelmann 2016-04-16 07:18:05 UTC
Created attachment 326150 [details]
A backtrace from gdb attached to exaile

Affected versions:
3.20.0, 3.20.1 (Fedora builds)
python-2.7.11-4.fc24.x86_64
glib2-2.48.0-1.fc24.x86_64

Steps to reproduce:
1. get exaile (git master, from https://github.com/exaile/exaile)
2. run it
3. in "Edit" → "Preferences" → "Plugins", enable "Main menu button"
4. press the button that appeared instead of main menu button

What happens:
Crash. Full backtrace is attached. It happens deep in Gtk+ code, not in python (exaile is written in python only) so I guess gtk+ is to blame (not sure though). truncated backtrace:

  • #0 gtk_css_gadget_get_preferred_size
    at gtkcssgadget.c line 357
  • #1 gtk_css_gadget_get_preferred_size
    at gtkcssgadget.c line 626
  • #2 gtk_menu_item_measure
    at gtkmenuitem.c line 482
  • #3 gtk_menu_item_measure
    at gtkmenuitem.c line 583
  • #4 gtk_css_custom_gadget_get_preferred_size
    at gtkcsscustomgadget.c line 124
  • #5 gtk_css_gadget_get_preferred_size
    at gtkcssgadget.c line 675
  • #6 gtk_menu_item_get_preferred_width
    at gtkmenuitem.c line 593
  • #7 gtk_widget_query_size_for_orientation
    at gtksizerequest.c line 181
  • #8 gtk_widget_compute_size_for_orientation
    at gtksizerequest.c line 397
  • #9 gtk_widget_get_preferred_width
    at gtksizerequest.c line 490

What should happen:
No crash (obviously). If something is wrong with the python code or GtkBuilder XML files, gtk+ should tell me.

Additional info:
This might be a duplicate of https://bugzilla.gnome.org/show_bug.cgi?id=765018
Comment 1 Christian Stadelmann 2016-04-16 08:30:25 UTC
This probably is a regression from 3.18.x where I didn't run into this problem. And I'm not the only one (see downstream bug report https://github.com/exaile/exaile/issues/257)

This issue is present on both X11 and Wayland backends.
Comment 2 Christian Stadelmann 2016-04-17 15:40:44 UTC
May I ask where this was fixed? I don't see any related commit in Gtk+ git master after 3.20.3, which is reported to be broken downstream.
Comment 3 Christian Stadelmann 2016-04-18 09:31:25 UTC
(In reply to Christian Stadelmann from comment #2)
> May I ask where this was fixed?

See commit https://git.gnome.org/browse/gtk+/commit/gtk?id=96f0ed9ec5b5b071efabb15b03c37f40df7ae3b1

Can you please backport this to Gtk+ 3.20? Reopening until this is done.